--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
             <h1>Quais as modalidades de serviços? </h1>
 
-            <p style="font-size: 15px;">Infraestrutura como Serviço (IaaS): Oferece recursos de computação básicos, como servidores virtuais, armazenamento e redes.
-      Plataforma como Serviço (PaaS): Fornece um ambiente de desenvolvimento e implantação de aplicativos sem a necessidade de gerenciar a infraestrutura subjacente.
-      Software como Serviço (SaaS): Disponibiliza aplicativos completos pela internet, que você pode acessar através de um navegador.
-      Armazenamento na Nuvem: Permite o armazenamento de dados em servidores remotos, acessíveis pela internet.
-      Escalabilidade: A capacidade de ajustar automaticamente os recursos de acordo com a demanda. Isso significa que você pode aumentar ou diminuir a capacidade de processamento e armazenamento conforme necessário, sem precisar investir em hardware adicional.
-      Pagamentos Baseados em Uso: Muitos serviços de nuvem funcionam com um modelo de pagamento conforme o uso, o que significa que você paga apenas pelos recursos que utiliza, em vez de investir em infraestrutura fixa.
-      Acesso Global e Mobilidade: Com a nuvem, você pode acessar seus dados e aplicativos de qualquer lugar com conexão à internet, promovendo flexibilidade e colaboração remota.
+            <p style="font-size: 15px;">Infraestrutura como Serviço (IaaS): Oferece recursos de computação básicos, como servidores virtuais, armazenamento e redes.<br>
+      Plataforma como Serviço (PaaS): Fornece um ambiente de desenvolvimento e implantação de aplicativos sem a necessidade de gerenciar a infraestrutura subjacente.<br>
+      Software como Serviço (SaaS): Disponibiliza aplicativos completos pela internet, que você pode acessar através de um navegador.<br>
+      Armazenamento na Nuvem: Permite o armazenamento de dados em servidores remotos, acessíveis pela internet.<br>
+      Escalabilidade: A capacidade de ajustar automaticamente os recursos de acordo com a demanda. Isso significa que você pode aumentar ou diminuir a capacidade de processamento e armazenamento conforme necessário, sem precisar investir em hardware adicional.<br>
+      Pagamentos Baseados em Uso: Muitos serviços de nuvem funcionam com um modelo de pagamento conforme o uso, o que significa que você paga apenas pelos recursos que utiliza, em vez de investir em infraestrutura fixa.<br>
+      Acesso Global e Mobilidade: Com a nuvem, você pode acessar seus dados e aplicativos de qualquer lugar com conexão à internet, promovendo flexibilidade e colaboração remota.<br>
 
             <h1> Quais os tipos de nuvem? Defina cada uma delas. </h1>
 
